brocode-rs/tui_app_server/src/status/snapshots/brocode_tui_app_server__status__tests__status_snapshot_shows_empty_limits_message.snap
---
source: tui_app_server/src/status/tests.rs
assertion_line: 826
expression: sanitized
---
/status

╭───────────────────────────────────────────────────────────────────────╮
│  >_ brocode v0.117.0                                                  │
│                                                                       │
│ Visit https://chatgpt.com/codex/settings/usage for up-to-date         │
│ information on rate limits and credits                                │
│                                                                       │
│  Model:            gpt-5.1-codex-max (reasoning none, summaries auto) │
│  Directory: [[workspace]]                                             │
│  Permissions:      Custom (read-only, on-request)                     │
│  Agents.md:        <none>                                             │
│                                                                       │
│  Token usage:      750 total  (500 input + 250 output)                │
│  Context window:   100% left (750 used / 272K)                        │
│  Limits:           data not available yet                             │
╰───────────────────────────────────────────────────────────────────────╯
